<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.setting.PersonInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_f8f8f8_radius5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="个人信息"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:background="@color/color_959595" />

        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_sex"
                android:drawablePadding="6dp"
                android:text="@string/sex"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="23dp"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_next" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:background="@color/color_959595" />

        <RelativeLayout
            android:id="@+id/rl_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_age"
                android:drawablePadding="6dp"
                android:text="@string/age"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="23dp"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_next" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:background="@color/color_959595" />

        <RelativeLayout
            android:id="@+id/rl_stature"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_stature"
                android:drawablePadding="6dp"
                android:text="@string/stature"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_stature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="23dp"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_next" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_f8f8f8_radius5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="目标设定"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/color_959595" />

        <RelativeLayout
            android:id="@+id/rl_target_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_weight_target"
                android:drawablePadding="6dp"
                android:text="@string/target_weight"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_target_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="23dp"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_next" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/color_959595" />

        <RelativeLayout
            android:id="@+id/rl_target_step"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_step_target"
                android:drawablePadding="6dp"
                android:text="@string/target_step"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_target_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="23dp"
                android:textColor="@color/color_313131"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_next" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>